Deleted usages of annotations, since the game sees it as reflection, replaced it with static members and functions.